# arcaneflow

./: .gitignore  README.md  pyproject.toml
src/arcaneflow/: __init__.py
src/arcaneflow/connectors/sinks/database/: sql_sink.py
src/arcaneflow/connectors/sinks/stdout/: print_sink.py
src/arcaneflow/connectors/sources/file_based/: csv_source.py
src/arcaneflow/core/: config.py
src/arcaneflow/core/interfaces/: context.py  etl_node.py  transformation_signature.py
src/arcaneflow/core/optimizers/: cayley.py
src/arcaneflow/core/optimizers/graph/: schema_state_manager.py  transformation_graph_builder.py
src/arcaneflow/core/optimizers/strategies/: __init__.py  base_optimizer.py  cycle_optimizer.py  redundancy_optimizer.py
src/arcaneflow/core/pipeline/: builder.py  context.py  optimizing_builder.py
src/arcaneflow/data/: __init__.py  base.py  chain.py  data_frame_schema.py  data_source.py  pipeline.py  schema.py  transformation.py  transformation_chain.py
src/arcaneflow/data/transformations/: __init__.py  base.py  rename_columns.py
src/arcaneflow/db/: manager.py
src/arcaneflow/orm/: base.py
src/arcaneflow/pipeline/: __init__.py  base.py  data_processor.py  schema_validator.py  stats.py
src/arcaneflow/transformations/column_operations/: rename.py
tests/: __init__.py
tests/core/: test_config.py
tests/integration/: test_csv_to_sql.py
tests/unit/: test_column_renamer.py
tests/unit/connectors/sinks/database/: test_sql_sink.py
