[project]
name = "arcaneflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Drummond",email = "60265150+bendrummond389@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "arcaneflow", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
